adding o2 saturation blog

--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ nav a {
 }
 
 article {
-    max-width: 800px;
+    max-width: 60%;
     margin: 20px auto;
     padding: 20px;
     background: #fff;
