--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ header {
     color: #fff;
     padding: 20px 0;
     text-align: center;
+    line-height:230%;
 }
 
 nav {
@@ -79,4 +80,11 @@ footer {
     position: relative;
     bottom: 0;
     width: 100%;
+}
+
+header a button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding:5px 10px;
 }
