--- a/css/style.css
+++ b/css/style.css
@@ -87,4 +87,20 @@ header a button {
   top: 10px;
   right: 10px;
   padding:5px 10px;
+} 
+
+a button.nextSection {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding:5px 10px;
+  width:22em;
+} 
+
+a button.prevSection {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  padding:5px 5px;
+  width:22em;
 }
