--- a/css/style.css
+++ b/css/style.css
@@ -22,12 +22,14 @@ nav {
 }
 
 nav ul {
-    list-style: none;
+    list-style:linear-gradient(45deg, gray 0 50%, black 50% 100%);
     padding: 0;
+    text-align: left;
+    margin-left:12em;
 }
 
 nav ul li {
-    display: block;
+    display:list-item;
     margin: 15px 15px;
 	font-size: x-large;
 	font-stretch: semi-expanded;
