--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,37 @@ nav {
     text-align: center;
 }
 
-nav ul {
+nav.mainIndex ul {
     list-style:linear-gradient(45deg, gray 0 50%, black 50% 100%);
     padding: 0;
     text-align: left;
     margin-left:12em;
+}
+
+@media screen and (max-width:768px) and (orientation:portrait) {
+    nav.mainIndex ul {
+        list-style:linear-gradient(45deg, gray 0 50%, black 50% 100%);
+        padding: 0;
+        text-align: left;
+        margin-left:10px;
+    }
+}
+
+
+nav.studyGuide ul {
+    list-style:linear-gradient(45deg, gray 0 50%, black 50% 100%);
+    padding: 0;
+    text-align: left;
+    margin-left:12em;
+}
+
+
+nav ul li {
+    display:list-item;
+    margin: 15px 15px;
+	font-size: x-large;
+	font-stretch: semi-expanded;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 nav ul li {
@@ -37,13 +63,12 @@ nav ul li {
 }
 
 nav.mainIndex ul li a {
- font-size: smaller;
+    font-size: smaller;
 }
 
 nav.studyGuide ul li a {
- font-size: smaller;
+    font-size: smaller;
 }
-
 
 nav a {
     text-decoration: none;
