--- a/css/style.css
+++ b/css/style.css
@@ -132,3 +132,6 @@ a button.prevSection {
   padding:5px 5px;
   width:22em;
 }
+
+.callout { background: #f0f8ff; border-left: 5px solid #004080; padding: 10px 15px; margin: 20px 0; }
+.warning { background: #fff4e5; border-left: 5px solid #ff8800; padding: 10px 15px; margin: 20px 0; }
