--- a/css/style.css
+++ b/css/style.css
@@ -68,9 +68,14 @@ nav a {
     font-weight: bold;
 }
 
-article {
-}
 
+    article {
+        background: #ff0;
+        border-radius: 5px;
+        margin: 10px auto;
+        padding: 10px;
+        width: 88%;
+    }
 
 @media only screen and (max-width:600px) {
     article {
