try to get a color change

--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ nav a {
 
 
 article {
-    background-color: #ff0;
+    background-color: green;
     border-radius: 5px;
     margin: 10px auto;
     padding: 10px;
