--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ nav a {
 
 @media only screen and (max-width: 600px) {
     article {
-        background-color: green;
+        background-color: lightgreen;
         border-radius: 5px;
         margin: 10px auto;
         padding: 10px;
@@ -80,11 +80,11 @@ nav a {
 
 @media only screen and (min-width: 600px) {
     article {
-    background-color: blue;
+    background-color: lightblue;
         border-radius: 5px;
         margin: 10px auto;
         padding: 10px;
-        width: 88%;
+        width: 48%;
     }
 }
 
