--- a/css/style.css
+++ b/css/style.css
@@ -70,21 +70,21 @@ nav a {
 
 @media only screen and (max-width: 600px) {
     article {
-        background-color: lightgreen;
+        background-color: rgb(196, 226, 196);
         border-radius: 5px;
         margin: 10px auto;
         padding: 10px;
-        width: 88%;
+        width:94%;
         }
 }
 
 @media only screen and (min-width: 600px) {
     article {
-    background-color: lightblue;
+    background-color: rgb(196, 196, 226);
         border-radius: 5px;
         margin: 10px auto;
         padding: 10px;
-        width: 48%;
+        width: 78%;
     }
 }
 
