--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ header a button {
   padding:5px 10px;
 } 
 
-a button.nextSection {
+a.nextSection {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -138,7 +138,7 @@ a button.nextSection {
   width:22em;
 } 
 
-a button.prevSection {
+a.prevSection {
   position: absolute;
   top: 10px;
   left: 10px;
@@ -148,3 +148,17 @@ a button.prevSection {
 
 .callout { background: #f0f8ff; border-left: 5px solid #004080; padding: 10px 15px; margin: 20px 0; }
 .warning { background: #fff4e5; border-left: 5px solid #ff8800; padding: 10px 15px; margin: 20px 0; }
+
+a.buttonSimulator {
+  display: inline-block;
+  padding: 0.5em 1em;
+  background-color: white;
+  color: black;
+  border-radius: 4px;
+  text-decoration: none;
+}
+a.buttonSimulator:hover {
+  background-color:lightgray;
+  font-weight: 500;
+  font-style:italic;
+}
