--- a/assets/css/ques_and_answ.css
+++ b/assets/css/ques_and_answ.css
@@ -22,13 +22,20 @@ p {
   background-color: #004b66;
   color: white;
   cursor: pointer;
-  padding: 14px 20px;
+  xpadding: 14px 20px;
   margin-bottom: 5px;
   border: none;
   text-align: left;
   width: 100%;
   font-size: 1rem;
   transition: background-color 0.3s ease;
+
+  text-indent: -36px; 
+  padding-left: 52px;
+  padding-right: 12px;
+  padding-bottom: 12px;
+  padding-top: 12px;
+  line-height: 1.4em;
 }
 
 .accordion:hover,
