--- a/assets/css/ques_and_answ.css
+++ b/assets/css/ques_and_answ.css
@@ -95,3 +95,11 @@ p {
   margin-top: 0.5em;
   padding-left: 1.5em;
 }
+
+.bonus-icon {
+  color: gold;
+  margin-left: 0.725em;
+  margin-right: 0.5em;
+  font-size: 2.1em;
+  vertical-align: middle;
+}
