--- a/css/style.css
+++ b/css/style.css
@@ -126,8 +126,8 @@ footer {
 
 header a button {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 2em;
+  right: 2em;
   padding:5px 10px;
 } 
 
